--- a/LFGBotUtils/LFGBotUtils.csproj
+++ b/LFGBotUtils/LFGBotUtils.csproj
@@ -13,4 +13,8 @@
       <Folder Include="TargetJson" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="obj\Release\netcoreapp3.1\LFGBotUtils.exe" />
+    </ItemGroup>
+
 </Project>
