--- a/LFGBot/LFGBot.csproj
+++ b/LFGBot/LFGBot.csproj
@@ -8,10 +8,7 @@
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-rc.1.20451.14" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Include="obj\Release\netcoreapp3.1\LFGBot.exe" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
 </Project>
